# emails-flow-python

./: .env.example  .gitignore  Makefile  README.md  SECURITY.md  docker-compose.yml  pyproject.toml
cdk/: .env.example  app.py  stack.py
cdk/lambdas/: __init__.py  email_analyze_lambda.py  email_store_lambda.py  emails_analyze_lambda.py  emails_read_lambda.py  post_store_lambda.py  shared_env.py  test_lambda.py
cdk/queues/: __init__.py  email_analyze_dead_queue.py  email_analyze_queue.py  email_read_dead_queue.py  email_read_queue.py  post_store_dead_queue.py  post_store_queue.py
dev-setup/: 01-create-queues.sh
lambdas/0-test/: main.py
lambdas/1-emails-read/: main.py
lambdas/2-email-store/: main.py
lambdas/3-emails-analyze/: main.py
lambdas/4-email-analyze/: main.py
lambdas/5-post-store/: main.py
lambdas/emails-read/: main.py
shared/: __init__.py  airtable.py  metrics.py  tracing.py  types.py
shared/ai/: __init__.py  ai.py  output.py  prompt.py
shared/emails/: EmailService.py  __init__.py  cleanHTML.js  clean_html.py
shared/metrics/: __init__.py
shared/sqs/: send_message.py
shared/supabase/: SupabaseClient.py  __init__.py
shared/tracing/: __init__.py  decorators.py  setup_opentelemetry.py
